@@ -3645,7 +3645,7 @@ endobj
 /Contents 86 0 R>>
 endobj
 86 0 obj
-<</Length 2903>>
+<</Length 3985>>
 stream
 2 J
 0.57 w
@@ -3695,6 +3695,22 @@ BT /F2 11.00 Tf ET
 q 0.000 g BT 203.20 375.13 Td (. If wishing to skip only certain external dependencies, set this variable's) Tj ET Q
 q 0.000 g BT 59.53 360.95 Td (value to the name of the external dependencies \(the generic dependency names used by the Phoronix) Tj ET Q
 q 0.000 g BT 59.53 346.78 Td (Test Suite\) to not install. Multiple dependencies to skip can be delimited by a comma.) Tj ET Q
+BT /F2 11.00 Tf ET
+BT /F1 11.00 Tf ET
+q 0.000 g BT 59.53 318.43 Td (PTS_EXTRA_SYSTEM_LOGS_DIR) Tj ET Q
+BT /F2 11.00 Tf ET
+q 0.000 g BT 59.53 290.09 Td (By default the Phoronix Test Suite collects common system logs \(cpuinfo, lscpu, dmesg\) during the) Tj ET Q
+q 0.000 g BT 59.53 275.91 Td (benchmarking process when saving test results. If wanting to collect additional, arbitrary system log) Tj ET Q
+q 0.000 g BT 59.53 261.74 Td (files specific to your operating environment or for other niche system information, the ) Tj ET Q
+BT /F3 11.00 Tf ET
+q 0.000 g BT 59.53 247.57 Td (PTS_EXTRA_SYSTEM_LOGS_DIR) Tj ET Q
+BT /F2 11.00 Tf ET
+q 0.000 g BT 236.80 247.57 Td ( environment variable can be set as a path to a directory containing) Tj ET Q
+q 0.000 g BT 59.53 233.39 Td (such log files. Prior to running the Phoronix Test Suite simply set ) Tj ET Q
+BT /F3 11.00 Tf ET
+q 0.000 g BT 376.82 233.39 Td (PTS_EXTRA_SYSTEM_LOGS_DIR) Tj ET Q
+BT /F2 11.00 Tf ET
+q 0.000 g BT 59.53 219.22 Td (to the directory where any text files should be captured from following test completion.) Tj ET Q
 0.000 0.333 0.000 RG
 28.35 42.52 m 566.93 42.52 l S
 BT /F1 7.00 Tf ET
@@ -7241,7 +7257,7 @@ endobj
 /Author (Phoronix Test Suite)
 /Keywords ()
 /Creator (PhoronixTestSuite/Ibestad)
-/CreationDate (D:20210504110027)
+/CreationDate (D:20210504134631)
 >>
 endobj
 245 0 obj
@@ -7255,8 +7271,8 @@ endobj
 xref
 0 246
 0000000000 65535 f 
-0000318313 00000 n 
-0000330503 00000 n 
+0000319395 00000 n 
+0000331585 00000 n 
 0000000009 00000 n 
 0000000382 00000 n 
 0000000892 00000 n 
@@ -7341,165 +7357,165 @@ xref
 0000177933 00000 n 
 0000182646 00000 n 
 0000182876 00000 n 
-0000185830 00000 n 
-0000186615 00000 n 
-0000192779 00000 n 
-0000193659 00000 n 
-0000200771 00000 n 
-0000201001 00000 n 
-0000208364 00000 n 
-0000208594 00000 n 
-0000211806 00000 n 
-0000212036 00000 n 
-0000216701 00000 n 
-0000216931 00000 n 
-0000220843 00000 n 
-0000221074 00000 n 
-0000225224 00000 n 
-0000225456 00000 n 
-0000229360 00000 n 
-0000229592 00000 n 
-0000233676 00000 n 
-0000233908 00000 n 
-0000237970 00000 n 
-0000238202 00000 n 
-0000242212 00000 n 
-0000242444 00000 n 
-0000246668 00000 n 
-0000246900 00000 n 
-0000250894 00000 n 
-0000251126 00000 n 
-0000255185 00000 n 
-0000255417 00000 n 
-0000258700 00000 n 
-0000258932 00000 n 
-0000265867 00000 n 
-0000266099 00000 n 
-0000267433 00000 n 
-0000267665 00000 n 
-0000272506 00000 n 
-0000272738 00000 n 
-0000277387 00000 n 
-0000277619 00000 n 
-0000283562 00000 n 
-0000283794 00000 n 
-0000289500 00000 n 
-0000289732 00000 n 
-0000295233 00000 n 
-0000295465 00000 n 
-0000302274 00000 n 
-0000302506 00000 n 
-0000307288 00000 n 
-0000307520 00000 n 
-0000313305 00000 n 
-0000313537 00000 n 
-0000315795 00000 n 
-0000316428 00000 n 
-0000318894 00000 n 
-0000318997 00000 n 
-0000319095 00000 n 
-0000319201 00000 n 
-0000323362 00000 n 
-0000324142 00000 n 
-0000330657 00000 n 
-0000330806 00000 n 
-0000330917 00000 n 
-0000331054 00000 n 
-0000331167 00000 n 
-0000331328 00000 n 
-0000331437 00000 n 
-0000331571 00000 n 
-0000331696 00000 n 
-0000331827 00000 n 
-0000331965 00000 n 
-0000332094 00000 n 
-0000332226 00000 n 
-0000332361 00000 n 
-0000332484 00000 n 
-0000332609 00000 n 
-0000332745 00000 n 
-0000332878 00000 n 
-0000333006 00000 n 
-0000333152 00000 n 
-0000333287 00000 n 
-0000333416 00000 n 
-0000333546 00000 n 
-0000333699 00000 n 
-0000333829 00000 n 
-0000333964 00000 n 
-0000334105 00000 n 
-0000334252 00000 n 
-0000334391 00000 n 
-0000334521 00000 n 
-0000334645 00000 n 
-0000334799 00000 n 
-0000334955 00000 n 
-0000335096 00000 n 
-0000335246 00000 n 
-0000335380 00000 n 
-0000335510 00000 n 
-0000335651 00000 n 
-0000335784 00000 n 
-0000335930 00000 n 
-0000336062 00000 n 
-0000336192 00000 n 
-0000336326 00000 n 
+0000186912 00000 n 
+0000187697 00000 n 
+0000193861 00000 n 
+0000194741 00000 n 
+0000201853 00000 n 
+0000202083 00000 n 
+0000209446 00000 n 
+0000209676 00000 n 
+0000212888 00000 n 
+0000213118 00000 n 
+0000217783 00000 n 
+0000218013 00000 n 
+0000221925 00000 n 
+0000222156 00000 n 
+0000226306 00000 n 
+0000226538 00000 n 
+0000230442 00000 n 
+0000230674 00000 n 
+0000234758 00000 n 
+0000234990 00000 n 
+0000239052 00000 n 
+0000239284 00000 n 
+0000243294 00000 n 
+0000243526 00000 n 
+0000247750 00000 n 
+0000247982 00000 n 
+0000251976 00000 n 
+0000252208 00000 n 
+0000256267 00000 n 
+0000256499 00000 n 
+0000259782 00000 n 
+0000260014 00000 n 
+0000266949 00000 n 
+0000267181 00000 n 
+0000268515 00000 n 
+0000268747 00000 n 
+0000273588 00000 n 
+0000273820 00000 n 
+0000278469 00000 n 
+0000278701 00000 n 
+0000284644 00000 n 
+0000284876 00000 n 
+0000290582 00000 n 
+0000290814 00000 n 
+0000296315 00000 n 
+0000296547 00000 n 
+0000303356 00000 n 
+0000303588 00000 n 
+0000308370 00000 n 
+0000308602 00000 n 
+0000314387 00000 n 
+0000314619 00000 n 
+0000316877 00000 n 
+0000317510 00000 n 
+0000319976 00000 n 
+0000320079 00000 n 
+0000320177 00000 n 
+0000320283 00000 n 
+0000324444 00000 n 
+0000325224 00000 n 
+0000331739 00000 n 
+0000331888 00000 n 
+0000331999 00000 n 
+0000332136 00000 n 
+0000332249 00000 n 
+0000332410 00000 n 
+0000332519 00000 n 
+0000332653 00000 n 
+0000332778 00000 n 
+0000332909 00000 n 
+0000333047 00000 n 
+0000333176 00000 n 
+0000333308 00000 n 
+0000333443 00000 n 
+0000333566 00000 n 
+0000333691 00000 n 
+0000333827 00000 n 
+0000333960 00000 n 
+0000334088 00000 n 
+0000334234 00000 n 
+0000334369 00000 n 
+0000334498 00000 n 
+0000334628 00000 n 
+0000334781 00000 n 
+0000334911 00000 n 
+0000335046 00000 n 
+0000335187 00000 n 
+0000335334 00000 n 
+0000335473 00000 n 
+0000335603 00000 n 
+0000335727 00000 n 
+0000335881 00000 n 
+0000336037 00000 n 
+0000336178 00000 n 
+0000336328 00000 n 
 0000336462 00000 n 
-0000336602 00000 n 
+0000336592 00000 n 
 0000336733 00000 n 
-0000336885 00000 n 
-0000337010 00000 n 
-0000337184 00000 n 
-0000337302 00000 n 
-0000337432 00000 n 
-0000337570 00000 n 
-0000337681 00000 n 
-0000337812 00000 n 
-0000337945 00000 n 
-0000338083 00000 n 
-0000338227 00000 n 
-0000338374 00000 n 
-0000338508 00000 n 
-0000338630 00000 n 
-0000338780 00000 n 
-0000338896 00000 n 
-0000339042 00000 n 
-0000339202 00000 n 
-0000339344 00000 n 
-0000339477 00000 n 
-0000339588 00000 n 
-0000339730 00000 n 
-0000339892 00000 n 
-0000340016 00000 n 
-0000340141 00000 n 
-0000340309 00000 n 
-0000340439 00000 n 
-0000340585 00000 n 
-0000340696 00000 n 
-0000340821 00000 n 
-0000340954 00000 n 
-0000341085 00000 n 
+0000336866 00000 n 
+0000337012 00000 n 
+0000337144 00000 n 
+0000337274 00000 n 
+0000337408 00000 n 
+0000337544 00000 n 
+0000337684 00000 n 
+0000337815 00000 n 
+0000337967 00000 n 
+0000338092 00000 n 
+0000338266 00000 n 
+0000338384 00000 n 
+0000338514 00000 n 
+0000338652 00000 n 
+0000338763 00000 n 
+0000338894 00000 n 
+0000339027 00000 n 
+0000339165 00000 n 
+0000339309 00000 n 
+0000339456 00000 n 
+0000339590 00000 n 
+0000339712 00000 n 
+0000339862 00000 n 
+0000339978 00000 n 
+0000340124 00000 n 
+0000340284 00000 n 
+0000340426 00000 n 
+0000340559 00000 n 
+0000340670 00000 n 
+0000340812 00000 n 
+0000340974 00000 n 
+0000341098 00000 n 
 0000341223 00000 n 
-0000341341 00000 n 
-0000341481 00000 n 
-0000341648 00000 n 
-0000341779 00000 n 
-0000341910 00000 n 
-0000342090 00000 n 
-0000342227 00000 n 
-0000342344 00000 n 
-0000342471 00000 n 
-0000342612 00000 n 
-0000342750 00000 n 
-0000342881 00000 n 
-0000343018 00000 n 
-0000343135 00000 n 
-0000343365 00000 n 
-0000343505 00000 n 
-0000343668 00000 n 
-0000343794 00000 n 
-0000343860 00000 n 
-0000344114 00000 n 
+0000341391 00000 n 
+0000341521 00000 n 
+0000341667 00000 n 
+0000341778 00000 n 
+0000341903 00000 n 
+0000342036 00000 n 
+0000342167 00000 n 
+0000342305 00000 n 
+0000342423 00000 n 
+0000342563 00000 n 
+0000342730 00000 n 
+0000342861 00000 n 
+0000342992 00000 n 
+0000343172 00000 n 
+0000343309 00000 n 
+0000343426 00000 n 
+0000343553 00000 n 
+0000343694 00000 n 
+0000343832 00000 n 
+0000343963 00000 n 
+0000344100 00000 n 
+0000344217 00000 n 
+0000344447 00000 n 
+0000344587 00000 n 
+0000344750 00000 n 
+0000344876 00000 n 
+0000344942 00000 n 
+0000345196 00000 n 
 trailer
 <<
 /Size 246
@@ -7507,5 +7523,5 @@ trailer
 /Info 244 0 R
 >>
 startxref
-344206
+345288
 %%EOF
