@@ -6,6 +6,7 @@ pts-core: Ubuntu 21.04 dependency updates for changed/removed package names
 pts-core: Add "auto-resolution-wide" option
 pts-core: Add $CPU_THREADS_PER_CORE helper
 pts-core: Allow perf-per-dollar-per-hour in the result viewer, extending perf-per-dollar HTML helper
+pts-core: Add PTS_EXTRA_SYSTEM_LOGS_DIR environment variable to allow pointing to directory of extra system log files
 phodevi: Intel Linux graphics string reporting improvement
 system_monitor: Adjust perf-per precision
 
